fixed alignment

--- a/src/compFormSCSS/css/LoginForm-Display.css
+++ b/src/compFormSCSS/css/LoginForm-Display.css
@@ -22,14 +22,12 @@ label, .display-data, .display-label {
 
 .container-input-err {
   display: inline-flex;
-  width: 70%;
   flex-direction: column;
   align-items: flex-start;
 }
 
 input {
   margin: 5px;
-  width: 40%;
   border-width: 2px;
   border-color: grey;
   border-radius: 5px;
